# wordle-discord-tracker

./: Cargo.toml
src/: detection.rs  lib.rs  main.rs
tests/: test_match.rs
